--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   command = "npm run build"
-  publish = "public"
+  publish = "dist"
   
 # ➌ Dirige cualquier llamada a /api/submit-lead a la función serverless
 [[redirects]]
