feat: round-robin de agentes vía Upstash + limpieza del input oculto

--- a/netlify.toml
+++ b/netlify.toml
@@ -8,3 +8,7 @@
   to   = "/.netlify/functions/submit-lead"
   status = 200
   force = true
+
+UPSTASH_REDIS_REST_URL="https://intense-elf-10586.upstash.io"
+UPSTASH_REDIS_REST_TOKEN="ASlaAAIjcDFmOGY0N2VjNmUzNTE0ZmQ2ODU5YTU5ZGE1MDVhZGViMXAxMA"
+AGENT_LIST              = juan,cristian       # orden del round-robin
